2007-07-10  Aaron Bockover  <abock@gnome.org>

	* src/Dap/Banshee.Dap.MassStorage/MassStorageDap.cs: Only call Eject on
	the storage volume if storage.requires_eject is not set or is true; calling
	Eject on a volume that doesn't require it causes problems (BGO #443048,
	Ilya Konstantinov)

	* src/Core/Banshee.Base/Gui/PreferencesDialog.cs: Use SetCurrentFolder
	instead of SetFilename on FileChooserButton to avoid a race condition
	in GTK+ (BGO #443027, Ilya Konstantinov)

2007-07-03  Patrick van Staveren  <trick@vanstaveren.us>

	* ext/taglib-sharp: change svn:externals pointer to use http:// rather
	than svn://

2007-06-12  Aaron Bockover  <abock@gnome.org>

	* data/audio-profiles/wavpack.xml.in: Updated by Sebastian Dröge 

2007-06-10  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap.MassStorage/MassStorageDap.cs: Set remover to null
	when finished deleting and set correct icon (Pepijn van de Geer, BGO
	#446037).

2007-06-09  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Base/Banshee.SmartPlaylist/QueryBuilderModel.cs: Add
	support for querying TrackNumber in smart playlists (Michael Monreal, BGO #445773).

2007-06-09  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap.MassStorage/MassStorageDap.cs: Increment the counter
	to make the (gui) counter and progressbar work (Pepijn van de Geer,
	BGO #445770).

2007-06-03  Gabriel Burt  <gabriel.burt@gmail.com>

	Patch from Brian Nickel fixing the build.

	* src/Core/Banshee.Base/FileTrackInfo.cs:
	* src/Core/Banshee.Base/IO/IOProxy.cs:
	* src/Core/Banshee.Base/StreamTagger.cs:
	* src/Dap/Banshee.Dap.Ipod/DatabaseRebuilder.cs: Work with latest TagLib#.

2007-05-30  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Base/Banshee.PlayerMigration/PlayerImportDialog.cs:
	* src/Core/Banshee.Base/Banshee.PlayerMigration/AmarokPlayerImport.cs:
	* src/Core/Banshee.Base/Banshee.PlayerMigration/RhythmboxPlayerImport.cs:
	Make some strings translatable.
